--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
         android:id="@+id/btn_Suma"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="Sumar"
         android:text="Sumar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
